And now change things to work on j8 again